// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Social Media Follow Default renders correctly with extra attributes 1`] = `
<test>
  <div
    class="ecl-social-media-follow"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow the latest progress and learn more about getting involved.
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#twitter"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#twitter_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#facebook"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#facebook_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#instagram"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#instagram_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-social-media-follow__link"
          href="/example"
        >
          Other social networks
        </a>
      </li>
    </ul>
  </div>
</test>
`;

exports[`EC - Social Media Follow Default renders correctly with extra class names 1`] = `
<test>
  <div
    class="ecl-social-media-follow custom-class custom-class--test"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow the latest progress and learn more about getting involved.
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#twitter"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#twitter_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#facebook"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#facebook_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#instagram"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#instagram_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-social-media-follow__link"
          href="/example"
        >
          Other social networks
        </a>
      </li>
    </ul>
  </div>
</test>
`;

exports[`EC - Social Media Follow Horizontal renders correctly 1`] = `
<test>
  <div
    class="ecl-social-media-follow"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow the latest progress and learn more about getting involved.
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#twitter"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#twitter_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#facebook"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#facebook_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#instagram"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#instagram_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-social-media-follow__link"
          href="/example"
        >
          Other social networks
        </a>
      </li>
    </ul>
  </div>
</test>
`;

exports[`EC - Social Media Follow Vertical renders correctly 1`] = `
<test>
  <div
    class="ecl-social-media-follow ecl-social-media-follow--vertical"
  >
    <p
      class="ecl-social-media-follow__description"
    >
      Follow the latest progress and learn more about getting involved.
    </p>
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#twitter"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#twitter_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#facebook"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#facebook_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#instagram"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#instagram_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin_hover"
            />
          </svg>
           
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-social-media-follow__link"
          href="/example"
        >
          Other social networks
        </a>
      </li>
    </ul>
  </div>
</test>
`;

exports[`EC - Social Media Follow with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <div
    class="ecl-social-media-follow"
  >
    <p
      class="ecl-social-media-follow__description"
    />
    <ul
      class="ecl-social-media-follow__list"
    >
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#twitter"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="example#notifications--success"
              />
            </svg>
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#twitter_hover"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="example#notifications--success"
              />
            </svg>
          </span>
           
          <span
            class="ecl-link__label"
          >
            Twitter
          </span>
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#facebook"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="example#notifications--success"
              />
            </svg>
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#facebook_hover"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="example#notifications--success"
              />
            </svg>
          </span>
           
          <span
            class="ecl-link__label"
          >
            Facebook
          </span>
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#instagram"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="example#notifications--success"
              />
            </svg>
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#instagram_hover"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="example#notifications--success"
              />
            </svg>
          </span>
           
          <span
            class="ecl-link__label"
          >
            Instagram
          </span>
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before ecl-social-media-follow__link"
          href="/example"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="example#notifications--success"
              />
            </svg>
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--xl ecl-link__icon ecl-social-media-follow__icon-hover"
            focusable="false"
          >
            <use
              xlink:href="example#linkedin_hover"
            />
          </svg>
          <span
            class="ecl-u-type-color-green ecl-compliance-inner ecl-compliance-success ecl-u-ma-2xs"
            title="[icon] - ecl compliant"
          >
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--xs"
              focusable="false"
            >
              <use
                xlink:href="example#notifications--success"
              />
            </svg>
          </span>
           
          <span
            class="ecl-link__label"
          >
            Linkedin
          </span>
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
      </li>
      <li
        class="ecl-social-media-follow__item"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-social-media-follow__link"
          href="/example"
        >
          Other social networks
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
      </li>
    </ul>
  </div>
  <!-- ecl2-compliance: social-media--follow -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [social-media--follow] -  {{ description }} needs to be set and filled in.
    </p>
  </div>
</test>
`;
